@@ -71,7 +71,7 @@ static void clear_control (WIDGET_CONTROLENTRY *widget);
 #endif
 
 #define MENU_COUNT          8
-#define CHOICE_COUNT       21
+#define CHOICE_COUNT       22
 #define SLIDER_COUNT        3
 #define BUTTON_COUNT       10
 #define LABEL_COUNT         4
@@ -94,7 +94,7 @@ typedef int (*HANDLER)(WIDGET *, int);
 static int choice_widths[CHOICE_COUNT] = {
 	3, 2, 3, 3, 2, 2, 2, 2, 2, 2, 
 	2, 2, 3, 2, 2, 3, 3, 2,	3, 3, 
-	3 };
+	3, 2 };
 
 static HANDLER button_handlers[BUTTON_COUNT] = {
 	quit_main_menu, quit_sub_menu, do_graphics, do_engine,
@@ -102,7 +102,7 @@ static HANDLER button_handlers[BUTTON_COUNT] = {
 	do_keyconfig };
 
 static int menu_sizes[MENU_COUNT] = {
-	7, 5, 6, 9, 2, 5,
+	7, 5, 7, 9, 2, 5,
 #ifdef HAVE_OPENGL
 	5,
 #else
@@ -137,6 +137,7 @@ static WIDGET *audio_widgets[] = {
 	(WIDGET *)(&sliders[2]),
 	(WIDGET *)(&choices[14]),
 	(WIDGET *)(&choices[9]),
+	(WIDGET *)(&choices[21]),
 	(WIDGET *)(&buttons[1]) };
 
 static WIDGET *engine_widgets[] = {
@@ -370,7 +371,7 @@ SetDefaults (void)
 	choices[6].selected = opts.cscan;
 	choices[7].selected = opts.scroll;
 	choices[8].selected = opts.subtitles;
-	choices[9].selected = opts.music;
+	choices[9].selected = opts.music3do;
 	choices[10].selected = opts.fullscreen;
 	choices[11].selected = opts.intro;
 	choices[12].selected = opts.fps;
@@ -382,6 +383,7 @@ SetDefaults (void)
 	choices[18].selected = opts.player1;
 	choices[19].selected = opts.player2;
 	choices[20].selected = 0;
+	choices[21].selected = opts.musicremix;
 
 	sliders[0].value = opts.musicvol;
 	sliders[1].value = opts.sfxvol;
@@ -401,7 +403,7 @@ PropagateResults (void)
 	opts.cscan = choices[6].selected;
 	opts.scroll = choices[7].selected;
 	opts.subtitles = choices[8].selected;
-	opts.music = choices[9].selected;
+	opts.music3do = choices[9].selected;
 	opts.fullscreen = choices[10].selected;
 	opts.intro = choices[11].selected;
 	opts.fps = choices[12].selected;
@@ -412,6 +414,7 @@ PropagateResults (void)
 	opts.shield = choices[17].selected;
 	opts.player1 = choices[18].selected;
 	opts.player2 = choices[19].selected;
+	opts.musicremix = choices[21].selected;
 
 	opts.musicvol = sliders[0].value;
 	opts.sfxvol = sliders[1].value;
@@ -1081,7 +1084,8 @@ GetGlobalOptions (GLOBALOPTS *opts)
 			OPTVAL_PC : OPTVAL_3DO;
 	opts->stereo = optStereoSFX ? OPTVAL_ENABLED : OPTVAL_DISABLED;
 	/* These values are read in, but won't change during a run. */
-	opts->music = (optWhichMusic == OPT_3DO) ? OPTVAL_3DO : OPTVAL_PC;
+	opts->music3do = opt3doMusic ? OPTVAL_ENABLED : OPTVAL_DISABLED;
+	opts->musicremix = optPrecursorsMusic ? OPTVAL_ENABLED : OPTVAL_DISABLED;
 	switch (snddriver) {
 	case audio_DRIVER_OPENAL:
 		opts->adriver = OPTVAL_OPENAL;
@@ -1311,7 +1315,8 @@ SetGlobalOptions (GLOBALOPTS *opts)
 	res_PutBoolean ("config.iconicscan", opts->cscan == OPTVAL_3DO);
 	res_PutBoolean ("config.smoothscroll", opts->scroll == OPTVAL_3DO);
 
-	res_PutBoolean ("config.3domusic", opts->music == OPTVAL_3DO);
+	res_PutBoolean ("config.3domusic", opts->music3do == OPTVAL_ENABLED);
+	res_PutBoolean ("config.remixmusic", opts->musicremix == OPTVAL_ENABLED);
 	res_PutBoolean ("config.3domovies", opts->intro == OPTVAL_3DO);
 	res_PutBoolean ("config.showfps", opts->fps == OPTVAL_ENABLED);
 	res_PutBoolean ("config.smoothmelee", opts->meleezoom == OPTVAL_3DO);
